# vy

./: .dockerignore  .env.example  .gitignore  .rules  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  DEVELOPER.md  DOCKER_DEPLOYMENT.md  Dockerfile  INTERACTIVE_CONFIG_DEMO.md  LICENSE  MEMORY_TOOLS_COMPLETE.md  MEMORY_TOOLS_ENABLED.md  MEMORY_TOOLS_FINAL_FIX.md  MEMORY_TOOLS_FIX_FOUND.md  MEMORY_TOOLS_SCHEMA_FIX_SUCCESS.md  MEMORY_USER_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  VECTOR_MEMORY.md  VECTOR_MEMORY_SUMMARY.md  cloud-run-service.yaml  demo_tui.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  setup-secrets.sh  turbo.json
.github/workflows/: ci.yml
apps/cli/: eslint.config.js  package.json  tsconfig.json  vitest.config.ts
apps/cli/src/: cli.ts  index.ts
apps/cli/src/commands/config/: README.md  index.ts
apps/cli/src/commands/config/__tests__/: prompt-handling.test.ts  utils.test.ts
apps/cli/src/commands/dev/: index.ts
apps/cli/src/commands/mem/: index.ts
apps/cli/src/commands/server/: index.ts
apps/cli/src/lib/: mcp-client.ts  utils.ts
apps/cli/src/lib/config/: connection-tester.ts  file-manager.ts
apps/vy-cli/: package.json
apps/vy-cli/src/: cli.ts  index.ts
apps/vy-cli/src/commands/config/: index.ts
apps/vy-cli/src/commands/mem/: index.ts
apps/vy-cli/src/commands/server/: index.ts
apps/vy-cli/src/lib/: formatters.ts  mcp-client.ts  utils.ts
apps/vy-cli/src/lib/config/: connection-tester.ts  file-manager.ts
scripts/: build.sh  dev-web.sh
src/: lib.rs  main.rs  prefs.rs  simple_memory.rs
src/cli/: chat.rs  config.rs  memory.rs  memory_demo.rs  mod.rs  simple_memory.rs
src/memory/: README.md  embeddings.rs  mod.rs  search.rs  storage.rs
src/tools/: auto_memory.rs  google_search.rs  memory.rs  memory_remove.rs  memory_store.rs  memory_update.rs  mod.rs  nutrition_analysis.rs  smart_memory_update.rs
src/tui/: app.rs  input.rs  message.rs  mod.rs
vy/: Cargo.toml
vy-cli/: Cargo.toml
vy-cli/src/: chat.rs  config.rs  lib.rs  memory.rs
vy-core/: Cargo.toml
vy-core/examples/: vector_memory_demo.rs
vy-core/src/: config.rs  lib.rs  memory.rs  vector_memory.rs
vy-core/src/tools/: complete_memory_tools.rs  exact_copy_memory_tool.rs  google_search.rs  memory.rs  memory_remove.rs  memory_store.rs  memory_update.rs  mod.rs  nutrition_analysis.rs  smart_memory_update.rs  test_memory_tool.rs  vector_memory_tools.rs  vector_memory_tools_test.rs
vy-core/tests/: agent_memory_integration_test.rs  integration_test.rs  memory_functionality_test.rs  memory_tools_schema_test.rs
vy-tui/: Cargo.toml
vy-tui/src/: lib.rs
vy-web/: Cargo.toml  README.md
vy-web/src/: main.rs
vy/src/: main.rs
web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChatInterface.tsx  WelcomeScreen.tsx
web/public/: manifest.json
