[package]
name = "vy"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.17.1"
rpassword = "7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
urlencoding = "2.1"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
