[workspace]
members = ["vy-core", "vy-cli", "vy-tui", "vy"]
resolver = "2"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.31", features = ["serde"] }

# LLM and AI dependencies
rig-core = "0.17.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2.1"

# Configuration and storage
config = "0.15.14"
directories = "6.0.0"
toml = "0.9.5"

# CLI dependencies
clap = { version = "4.5.45", features = ["derive"] }
rpassword = "7.3"

# TUI dependencies
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Vector database dependencies
qdrant-client = "1.11"

# Web server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dotenvy = "0.15"

# Dev dependencies
tempfile = "3.8"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
description = "Vy - An AI-powered chatbot with multiple interface options"
repository = "https://github.com/yourusername/vy"
