[package]
name = "vy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core functionality for the Vy AI chatbot"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
chrono.workspace = true

# LLM and AI dependencies
rig-core.workspace = true
reqwest.workspace = true
base64.workspace = true
urlencoding.workspace = true

# Configuration and storage
config.workspace = true
directories.workspace = true
toml.workspace = true

# Vector database dependencies
qdrant-client = "1.11"

[dev-dependencies]
tempfile.workspace = true
env_logger.workspace = true
