[package]
name = "vy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Vy - An AI-powered chatbot with multiple interface options"

[[bin]]
name = "vy"
path = "src/main.rs"

[dependencies]
vy-core = { path = "../vy-core" }
vy-cli = { path = "../vy-cli" }
vy-tui = { path = "../vy-tui" }

anyhow.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true

# CLI dependencies
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
